intergrated razor pay with payment module

--- a/src/main/resources/application-testing.properties
+++ b/src/main/resources/application-testing.properties
@@ -1,6 +1,8 @@
 spring.application.name=mehram
 server.port=2929
 
+pg.key.id = rzp_test_sglORNSPz2hjio
+pg.key.secret= j3uuxvSzjcDuuIsVc8XdzfwG
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
